Go back to using Loader

SimpleLoader was a workaround for QTBUG-60344, which has been fixed.